# lob-latency-lab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: bench_cancel_stress.cpp  bench_deep_order_book.cpp  bench_order_book.cpp  bench_order_book_latency.cpp
data/: sample_lobster_message.csv  sample_lobster_orderbook_2.csv  sample_orders.csv
docs/: design.md  devlog.md
include/: MarketDataReplay.hpp  Order.hpp  OrderBook.hpp
results/: benchmark_summary.md  current_performance.md  deep_book_benchmark_summary.md  latency_benchmark_summary.md  lobster_replay_summary.md  lobster_transition_validation.md  performance_history.md
scripts/: run_all.sh
src/: MarketDataReplay.cpp  OrderBook.cpp  lob_lobster_demo.cpp  lob_lobster_transition_validate.cpp  lob_lobster_validate.cpp  main.cpp
tests/: TestSupport.hpp  test_market_data_replay.cpp  test_order_book.cpp
